# milk-quality-screening

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build_report.py  case_workflow.py  demo.py  pipeline.py  pyproject.toml  supabase_pipeline.py  supabase_schema.sql  synthetic_data.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: test.yml
docs/: architecture.md  demo.md  field-pilot.md  hosted-deployment.md  methodology.md
tests/: test_build_report.py  test_case_workflow.py  test_demo.py  test_pipeline_behavior.py  test_supabase_pipeline.py  test_synthetic_data.py
