[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "milk-quality-screening"
version = "0.1.0"
description = "Evidence-aware statistical screening for dairy collection data"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Raghav" }]
keywords = [
  "dairy",
  "milk-quality",
  "quality-control",
  "anomaly-detection",
  "statistical-process-control",
  "food-safety",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "numpy>=1.26",
  "openpyxl>=3.1",
  "pandas>=2.2",
  "xlrd>=2.0.1",
]

[project.optional-dependencies]
reporting = [
  "matplotlib>=3.8",
  "reportlab>=4.0",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.9",
]

[project.scripts]
milk-quality-screen = "pipeline:main"
milk-quality-report = "build_report:main"
milk-quality-supabase = "supabase_pipeline:main"
milk-quality-synthetic-data = "synthetic_data:main"
milk-quality-demo = "demo:main"

[project.urls]
Documentation = "https://github.com/lamenting-hawthorn/milk-quality-screening#readme"
Issues = "https://github.com/lamenting-hawthorn/milk-quality-screening/issues"
Source = "https://github.com/lamenting-hawthorn/milk-quality-screening"

[tool.setuptools]
py-modules = ["pipeline", "build_report", "supabase_pipeline", "synthetic_data", "demo"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["pipeline", "build_report", "supabase_pipeline"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
